--- a/projects/templates/projects/delete_template.html
+++ b/projects/templates/projects/delete_template.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+{% include 'navbar.html' %}
 <form  method="post">
     {% csrf_token %}
     <p>Are you sure want to Delete {{project.title}}</p>
